fix: fix menuAlignment description in ButtonMenu and AvatarMenu and add new class in PrimitiveMenu (#609)

--- a/src/components/PrimitiveMenu/styles.css
+++ b/src/components/PrimitiveMenu/styles.css
@@ -45,6 +45,19 @@
   top: auto;
   bottom: 100%; }
 
+.rainbow-primitive-menu_dropdown--bottom-right {
+  top: auto;
+  bottom: 100%;
+  left: auto;
+  right: 0;
+  transform: translateX(0); }
+
+.rainbow-primitive-menu_dropdown--bottom-left {
+  top: auto;
+  bottom: 100%;
+  left: 0;
+  transform: translateX(0); }
+
 .rainbow-primitive-menu_dropdown--xx-small {
   min-width: 6rem; }
 
